--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,26 @@
-body,
-html {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-}
-
 #app {
-  margin: 20px;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .grid-container {
+  flex: 3; /* Takes 3 parts of the space */
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(100px, 1fr)
+  ); /* Adjust based on your preference */
   gap: 10px;
   padding: 10px;
-  float: left; /* Make grid float to leave space for details pane */
-  width: 70%; /* Adjust width as needed */
+  overflow-y: auto; /* In case of overflow */
+}
+
+.flora-details {
+  flex: 1; /* Takes 1 part of the space */
+  padding: 10px;
+  height: 100vh;
+  overflow-y: auto;
+  box-sizing: border-box;
 }
 
 .grid-item {
@@ -23,14 +28,14 @@ html {
   cursor: pointer;
 }
 
-.grid-item:hover .name {
+.grid-item > img {
+  max-width: 100%;
+  max-height: 150px; /* Adjust based on your preference */
+  object-fit: contain; /* This will ensure the entire image fits without cropping */
   display: block;
 }
-
-.grid-item > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.grid-item:hover .name {
+  display: block;
 }
 
 .name {
@@ -44,14 +49,3 @@ html {
   text-align: center;
   padding: 5px;
 }
-
-.flora-details {
-  float: right;
-  width: 30%; /* Adjust width as needed */
-  padding: 10px;
-  height: 100vh;
-  overflow-y: auto;
-  box-sizing: border-box;
-}
-
-/* Add other styles as needed */
