--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Sniglet", monospace; /* Use the correct font family name as specified by Google Fonts */
+}
+
 #app {
   display: flex;
 }
