--- a/src/style.css
+++ b/src/style.css
@@ -13,14 +13,15 @@ body {
   gap: 10px;
   padding: 10px;
   height: min-content;
+  grid-template-columns: repeat(
+    10,
+    1fr
+  ); /* Creates 10 columns, each 100px wide */
 }
 
 .flora-details {
   flex: 1;
   padding: 10px;
-  height: 100vh;
-  overflow-y: auto;
-  box-sizing: border-box;
 }
 
 .grid-item {
@@ -32,9 +33,6 @@ body {
 .grid-item > img {
   max-width: 100%;
 }
-.grid-item:hover .name {
-  display: block;
-}
 
 .name {
   display: none;
@@ -45,5 +43,13 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   text-align: center;
-  padding: 5px;
+  padding: 0px;
+  margin: 0px;
+  margin-bottom: 5px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+
+.grid-item:hover .name {
+  display: block;
 }
