--- a/src/style.css
+++ b/src/style.css
@@ -97,7 +97,7 @@ ul {
 }
 
 #effectSearchContainer {
-  flex: 2;
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
@@ -149,4 +149,19 @@ ul {
 
 ul li {
   text-align: left;
+}
+
+.effects-list {
+  margin: 10px 0 0 0; /* Adjust top margin as needed, remove bottom margin */
+  padding-left: 0; /* Ensure the list is left-aligned */
+}
+
+.effects-list li {
+  display: flex;
+  align-items: center; /* Align icon and text vertically */
+  margin-bottom: 5px; /* Space between list items */
+}
+
+.icon {
+  margin-right: 5px; /* Space between the icon and the effect name */
 }
