--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Sniglet", monospace; /* Use the correct font family name as specified by Google Fonts */
+  font-size: 14px;
 }
 
 #flora {
@@ -14,10 +15,7 @@ body {
   gap: 10px;
   padding: 10px;
   height: min-content;
-  grid-template-columns: repeat(
-    10,
-    1fr
-  ); /* Creates 10 columns, each 100px wide */
+  grid-template-columns: repeat(10, 1fr);
 }
 
 .flora-details {
@@ -36,45 +34,28 @@ body {
 }
 
 .name {
-  display: none;
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  text-align: center;
-  padding: 0px;
-  margin: 0px;
-  margin-bottom: 5px;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  margin-left: 10px;
+  width: 100px;
+  left: 0px;
+  margin-top: 5px;
 }
 
-.grid-item:hover .name {
-  display: block;
+#floraGrid .name {
+  width: 70px;
+  margin-left: 0px;
+  overflow: hidden;
+  margin-top: 0px;
 }
 
-ul.effects-list {
+ul {
   list-style-type: none; /* Hide default markers */
   padding-left: 0px;
-}
-ul.foods-list {
-  list-style-type: none; /* Hide default markers */
-  padding-left: 0px;
-}
-span.icon {
-  font-family: monospace;
-  font-size: 16px;
 }
 
 li {
   margin-bottom: 5px; /* Space between items */
-}
-
-li span {
-  font-weight: bold; /* Example styling for the icon */
-  margin-right: 5px; /* Space between the icon and text */
 }
 
 .effect-details div {
@@ -132,16 +113,6 @@ ul {
   height: auto;
 }
 
-.effect-details .name {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  padding: 5px;
-}
-
 ul {
   padding: 0;
   list-style-type: none;
@@ -166,36 +137,30 @@ ul li {
   margin-right: 5px; /* Space between the icon and the effect name */
 }
 
-#effectDetails .grid-item {
-  display: inline-block;
-  position: relative;
-  margin: 10px;
-  text-align: center;
-}
-
-.flora-effects-list {
-  list-style-type: none;
-  padding-left: 20px; /* Indent effect lists for readability */
-}
-
-.flora-name {
-  font-weight: bold;
-}
-
-li {
+#effectDetails {
   display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: flex-start;
+}
+
+.flora-container,
+.foods-container {
+  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+  gap: 10px;
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-.icon {
-  margin-right: 5px;
-}
-
-#effectDetails {
-  display: grid;
-  grid-template-columns: repeat(
-    10,
-    1fr
-  ); /* Creates 3 columns; adjust number and size as needed */
-  grid-gap: 20px; /* Adjusts the gap between grid items */
+.flora-container h2,
+.foods-container h2 {
+  grid-column: 1 / -1; /* Makes headings span all columns */
+  text-align: center;
+  height: min-content;
 }
